--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,43 +15,22 @@
     <% @finstagram_posts.each do |finstagram_post| %>
   <article class="finstagram-post">
   <div class="user-info">
-    <img src="<%= @finstagram_post_shark[:avatar_url] %>" alt="<%= @finstagram_post_shark[:username] %>">
-    <h2><%= @finstagram_post_shark[:username] %></h2>
-    <h3><%= @finstagram_post_shark[:humanized_time_ago] %></h3>
+    <img src="<%= finstagram_post.user.avatar_url %>" alt="<%= finstagram_post.user.username %>">
+    <h2><%= finstagram_post.user.username %></h2>
+    <h3><%= finstagram_post.humanized_time_ago %></h3>
   </div>
   <a class="photo" href="#">
-    <img src="<%= @finstagram_post_shark[:photo_url] %>" alt="finstagram post from <%= @finstagram_post_shark[:username] %>">
+    <img src="<%= finstagram_post.photo_url %>" alt="finstagram post from <%= finstagram_post.user.username %>">
   </a>
   <div class="actions">
-    <%= @finstagram_post_shark[:like_count] %> likes
-    <span class="comment-count"><%= @finstagram_post_shark[:comment_count] %> comment</span>
+    <%= finstagram_post.like_count %> likes
+    <span class="comment-count"><%= finstagram_post.comment_count %> comment</span>
   </div>
   <ul class="comments">
+  <% finstagram_post.comments.each do |comment| %>
     <li>
       <p>
-        <%= @finstagram_post_shark[:comments][0][:username] %>: <%= @finstagram_post_shark[:comments][0][:text] %>
-      </p>
-    </li>
-  </ul>
-</article>
-<article class="finstagram-post">
-  <div class="user-info">
-  <img src="<%= finstagram_post[:avatar_url] %>" alt="<%= finstagram_post[:username] %>">
-    <h2><%= finstagram_post[:username] %></h2>
-    <h3><%= finstagram_post[:humanized_time_ago] %></h3>
-  </div>
-  <a class="photo" href="#">
-    <img src="<%= finstagram_post[:photo_url] %>" alt="finstagram post from <%= finstagram_post[:username] %>">
-  </a>
-  <div class="actions">
-    <%= finstagram_post[:like_count] %> likes
-    <span class="comment-count"><%= finstagram_post[:comment_count] %> comment</span>
-  </div>
-  <ul class="comments">
-  <% finstagram_post[:comments].each do |comment| %>
-    <li>
-      <p>
-      <%= comment[:username] %>: <%= comment[:text] %>
+        <%= comment.user.username %>: <%= comment.text %>
       </p>
     </li>
     <% end %>
@@ -59,6 +38,3 @@
 </article>
 <% end %>
 </main> 
-  <%=yield% >
-  </body>
-</html>
