--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,16 +1,15 @@
-<!doctype html>
-<html>
-  <head>
-    <link rel="stylesheet" href="../../public/stylesheets/normalize.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700italic,700,300">
-    <link rel="stylesheet" href="../../public/stylesheets/lib.css">
-    <link rel="stylesheet" href="../../public/stylesheets/app.css">
-    <title>Finstagram</title>
-  </head>
-  <body>
   <header>
   <h1>Finstagram</h1>
-  </header>
+  <div class="login-info">
+    <% if current_user %>
+      <%= current_user.username %>
+      <a href="/logout">Logout</a>
+    <% else %>
+      <a href="/login">Login</a>
+      <a href="/signup">Signup</a>
+    <% end %>
+  </div>
+</header>
   <main role="main">
     <% @finstagram_posts.each do |finstagram_post| %>
   <article class="finstagram-post">
